Use getFirst and getLast methods for Lists